--- a/_includes/social.html
+++ b/_includes/social.html
@@ -55,3 +55,6 @@
             {%- if site.rss_icon -%}
             <a href="{{ site.baseurl | prepend: site.url }}/feed.xml" title="RSS Feed"><i class="fas fa-rss-square"></i></a>
             {% endif %}
+            {%- if site.cv_url -%}
+            <a href="{{ site.baseurl | prepend: site.cv_url }}" title="CV" target="{{ site.baseurl | prepend: site.cv_url }}"><i class="ai ai-cv ai-1x"></i></a>
+            {% endif %}
