--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -37,6 +37,14 @@ layout: default
           <!-- News -->
           {%- include news.html %}
           {%- endif %}
+          <!-- Experience -->
+          <h2>Experiences</h2>
+          <ul>
+            <li style="font-size: 1.15em;"><b>Amazon Web Services (AWS) AI</b>, Applied Scientist Intern, New York, 2023.05 - 2023.08</li>
+            <li style="font-size: 1.15em;"><b>Grammarly</b>, Research Intern, Vancouver, 2021.06 - 2021.12</li>
+            <li style="font-size: 1.15em;"><b>Tencent AI Lab</b>, Research Intern, Bellevue, 2020.06 - 2020.12</li>
+          </ul>
+
           {% if page.selected_papers -%}
             <!-- Selected papers -->
             {%- include selected_papers.html %}
